...
    "cancel_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
    "change_photo_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Change Photo"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cambiar foto"
...
    "delete_pool_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete pool"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar polla"
...
    "delete_pool_alert_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete pool?"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¿Eliminar polla?"
...
    "invite_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invite"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invitar"
...
    "profile_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
    "sign_out_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign out"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar sesión"
...
